Your commit message

--- a/index.html
+++ b/index.html
@@ -121,6 +121,38 @@
                 </div>
             </div>
         </div>
+        <div class="pg-card">
+            <div class="pic">
+                <img src="Data/bed5.jpg" alt="">
+            </div>
+            <div class="details">
+                <h3 id = "price">Price : 3500 RS/Month</h3>
+                <div class="location">
+                    <span class="material-symbols-outlined">location_on</span>
+                    <a id = "location" href="#">Location</a>
+                </div>
+                <div class="facilities">
+                    <div><p id ="p1">2</p> <span class="material-symbols-outlined">bed</span></div>
+                    <div><p id = "p2">PG</p><span class="material-symbols-outlined">house</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="pg-card">
+            <div class="pic">
+                <img src="Data/bed6.jpg" alt="">
+            </div>
+            <div class="details">
+                <h3 id = "price">Price : 3500 RS/Month</h3>
+                <div class="location">
+                    <span class="material-symbols-outlined">location_on</span>
+                    <a id = "location" href="#">Location</a>
+                </div>
+                <div class="facilities">
+                    <div><p id ="p1">2</p> <span class="material-symbols-outlined">bed</span></div>
+                    <div><p id = "p2">PG</p><span class="material-symbols-outlined">house</span></div>
+                </div>
+            </div>
+        </div>
     </div>
     <hr>
     <div class="footer">
