--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>SAHARA-Home page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="suboptions.css">
-    <link rel="icon" href="/Images/Icon.png">
+    <link rel="icon" href="Images/Icon.png">
     <script defer src="app.js"></script>
     <script async defer src="https://maps.gomaps.pro/maps/api/js?key=AlzaSy0FPa7wXDYpIoGrGJFYVK1JHdGjHH2PzRg&libraries=places" onload="initMap()"></script>
 
 </head>
-<body>
+<body> 
     <form action="/action" class="navbar">
         <div class="logo">
-            <img src="/Images/logo.png" class="image">
+            <img src="Images/logo.png" class="image">
         </div>
             
         <input type="text" id="locationInput" placeholder="Search for places" class="searchbar" name = "search">
@@ -190,7 +190,7 @@
         <div class="connect">
             <h3>Connect with us</h3>
             <ul>
-                <li><a href="https://www.instagram.com/ajinkya_14a?igsh=a3d5ODU2dTY4N3M1">instagram</a></li>
+                <li><a href="https://www.instagram.com/sahara_housing_hub?igsh=MTg1OHBld3JiYWtvNw==">instagram</a></li>
                 <li><a href="#">facebook</a></li>
                 <li><a href="#">twitter</a></li>
             </ul>
