--- a/login.html
+++ b/login.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-SAHARA</title>
+    <link rel="icon" href="Images/Icon.png">
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <form action="/action">
         <div class="logo">
-            <img src="/Images/logo.png" class="image">
+            <img src="Images/logo.png" class="image">
         </div>
         <div class="box">
             <h1>Login</h1>
